--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "w3s-react-02",
+  "name": "w3s-reactjs-02",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "tailwind": "npx tailwindcss -i ./src/input.css -o ./src/App.css --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
